[gd_scene format=3 uid="uid://dhlmjfwepx4m3"]

[ext_resource type="Script" uid="uid://cyuup88v80ef4" path="res://scripts/tutorial/test_scene.gd" id="1_wdkfl"]
[ext_resource type="PackedScene" uid="uid://cla3577hp8lop" path="res://scenes/global/pausa.tscn" id="2_6giiv"]
[ext_resource type="Script" uid="uid://cdkl08ebdy2e1" path="res://scripts/globalne/swap_scenes.gd" id="2_sasli"]
[ext_resource type="AudioStream" uid="uid://c28knv0m3ghw7" path="res://sounds/Item2A.wav" id="2_ti13s"]
[ext_resource type="PackedScene" uid="uid://ci424k2x6oaio" path="res://scenes/global/pause_fixed.tscn" id="3_j8pvy"]
[ext_resource type="PackedScene" uid="uid://baio7uhdkpsdj" path="res://scenes/global/eq.tscn" id="3_n05yb"]
[ext_resource type="PackedScene" uid="uid://8d8gar38poer" path="res://scenes/global/player.tscn" id="4_haphb"]
[ext_resource type="PackedScene" uid="uid://bu12f8knmw3jr" path="res://itemy/scenes/komernik/merkury.tscn" id="5_uigpl"]
[ext_resource type="Texture2D" uid="uid://bub3cipxxgltq" path="res://sprites/kopernik/pokoje/pokoj_konstelacj.png" id="5_wdkfl"]
[ext_resource type="Texture2D" uid="uid://dthxpkqwj0d44" path="res://sprites/meble/drzwi_gora.png" id="6_co88u"]
[ext_resource type="AudioStream" uid="uid://b4vjxxnire65u" path="res://sounds/qubodup-DoorSet/ogg/qubodup-DoorOpen01.ogg" id="7_78y6g"]
[ext_resource type="Texture2D" uid="uid://bapih2u5tawh7" path="res://sprites/meble/stol.png" id="9_1f8s5"]
[ext_resource type="Script" uid="uid://c87rt3sv8ebdt" path="res://scripts/globalne/open.gd" id="10_mcay7"]
[ext_resource type="PackedScene" uid="uid://wi24xc5qeodp" path="res://itemy/scenes/komernik/notka_4.tscn" id="13_0558m"]
[ext_resource type="PackedScene" uid="uid://c5ps7wj11hyu6" path="res://itemy/scenes/komernik/venus.tscn" id="14_ti13s"]
[ext_resource type="Texture2D" uid="uid://caqhnheng2exc" path="res://sprites/meble/skrzynia_open.png" id="15_6giiv"]
[ext_resource type="Texture2D" uid="uid://ccc2ejgf3f8wv" path="res://sprites/meble/skrzynia.png" id="17_j8pvy"]
[ext_resource type="Texture2D" uid="uid://df2j7ug1ybkx5" path="res://sprites/meble/polka_kopernik.png" id="19_6giiv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uigpl"]
size = Vector2(330, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xf542"]
size = Vector2(20, 144.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78y6g"]
size = Vector2(55, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_haphb"]
size = Vector2(68, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n05yb"]
size = Vector2(58, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sasli"]
size = Vector2(60, 66.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_re1f5"]
size = Vector2(75, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mcay7"]
size = Vector2(17.518784, 20.608112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6giiv"]

[node name="Konstelacje" type="Node2D" unique_id=365056715]
script = ExtResource("1_wdkfl")
pause_scene = ExtResource("2_6giiv")

[node name="Pause" parent="." unique_id=1581730630 instance=ExtResource("3_j8pvy")]

[node name="Camera2D" type="Camera2D" parent="." unique_id=1102060167]
zoom = Vector2(2, 2)

[node name="item_podnoszenieSFX" type="AudioStreamPlayer2D" parent="." unique_id=1251638220]
position = Vector2(170, 18.75)
stream = ExtResource("2_ti13s")

[node name="PokojKonstelacj" type="Sprite2D" parent="." unique_id=1760932632]
texture_filter = 1
texture = ExtResource("5_wdkfl")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." unique_id=737071481]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="CharacterBody2D" unique_id=70405364]
position = Vector2(-4, 99)
shape = SubResource("RectangleShape2D_uigpl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D" unique_id=474410203]
position = Vector2(1, -63)
shape = SubResource("RectangleShape2D_uigpl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBody2D" unique_id=939208053]
position = Vector2(170, 18.75)
shape = SubResource("RectangleShape2D_xf542")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CharacterBody2D" unique_id=1683186576]
position = Vector2(-170, 18)
shape = SubResource("RectangleShape2D_xf542")

[node name="Player" parent="." unique_id=1882407171 instance=ExtResource("4_haphb")]
position = Vector2(-127, 66)

[node name="spawn_wielki" type="Marker2D" parent="." unique_id=2063855784]
position = Vector2(-123, -26)

[node name="spawn_maly" type="Marker2D" parent="." unique_id=13638258]
position = Vector2(-49, -24)

[node name="spawn_skorpion" type="Marker2D" parent="." unique_id=880953366]
position = Vector2(46, -29)

[node name="spawn_orzel" type="Marker2D" parent="." unique_id=1884169099]
position = Vector2(120, -29)

[node name="merkury" parent="." unique_id=797910469 node_paths=PackedStringArray("itemSFX") instance=ExtResource("5_uigpl")]
z_index = 1
position = Vector2(140, -13)
itemSFX = NodePath("../item_podnoszenieSFX")

[node name="Area2D" type="Area2D" parent="." unique_id=1542398381 node_paths=PackedStringArray("drzwiSFX")]
script = ExtResource("2_sasli")
load_scenes = "res://scenes/kopernik/lacznik.tscn"
drzwiSFX = NodePath("../drzwiSFX")
target_spawn_id = "up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=255872086]
position = Vector2(-128, 66)
shape = SubResource("RectangleShape2D_78y6g")

[node name="DrzwiGora" type="Sprite2D" parent="." unique_id=1540638120]
texture_filter = 1
position = Vector2(-133, 87)
texture = ExtResource("6_co88u")

[node name="drzwiSFX" type="AudioStreamPlayer2D" parent="." unique_id=1097123247]
stream = ExtResource("7_78y6g")
volume_db = 9.545

[node name="eq" parent="." unique_id=446596139 instance=ExtResource("3_n05yb")]
offset_left = -87.0
offset_top = 46.0
offset_right = -87.0
offset_bottom = 46.0

[node name="orzel" type="Area2D" parent="." unique_id=1742459246]
script = ExtResource("2_sasli")
load_scenes = "res://scenes/kopernik/obraz_orzel.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="orzel" unique_id=1967978144]
position = Vector2(122, -53)
shape = SubResource("RectangleShape2D_haphb")

[node name="skorpion" type="Area2D" parent="." unique_id=1217320697]
script = ExtResource("2_sasli")
load_scenes = "res://scenes/kopernik/obraz_skorpion.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="skorpion" unique_id=831470112]
position = Vector2(47, -55)
shape = SubResource("RectangleShape2D_n05yb")

[node name="maly_woz" type="Area2D" parent="." unique_id=1119362659]
script = ExtResource("2_sasli")
load_scenes = "res://scenes/kopernik/obraz_maly_woz.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="maly_woz" unique_id=1281681790]
position = Vector2(-50, -54.25)
shape = SubResource("RectangleShape2D_sasli")

[node name="wielki_woz" type="Area2D" parent="." unique_id=553644362]
script = ExtResource("2_sasli")
load_scenes = "res://scenes/kopernik/obraz_wielki_woz.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="wielki_woz" unique_id=203278683]
position = Vector2(-120.5, -55)
shape = SubResource("RectangleShape2D_re1f5")

[node name="Stol" type="Sprite2D" parent="." unique_id=1339523902]
texture_filter = 1
position = Vector2(140, 0)
texture = ExtResource("9_1f8s5")

[node name="pudelko2" type="Area2D" parent="." unique_id=1228723442 node_paths=PackedStringArray("sprite", "item")]
rotation = 0.0041928086
script = ExtResource("10_mcay7")
open = ExtResource("15_6giiv")
sprite = NodePath("Pudelko")
item = NodePath("notka4")
id_przedmiotu = "pudelko6"

[node name="notka4" parent="pudelko2" unique_id=404466428 node_paths=PackedStringArray("itemSFX") instance=ExtResource("13_0558m")]
z_index = 1
position = Vector2(-152.05737, -13.362572)
rotation = -0.0041928086
itemSFX = NodePath("../../item_podnoszenieSFX")

[node name="Pudelko" type="Sprite2D" parent="pudelko2" unique_id=1659642328]
texture_filter = 1
position = Vector2(-152.03221, -7.362625)
texture = ExtResource("17_j8pvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pudelko2" unique_id=657152916]
position = Vector2(-151.7959, -8.375195)
shape = SubResource("RectangleShape2D_mcay7")

[node name="pudelko" type="Area2D" parent="." unique_id=611971086 node_paths=PackedStringArray("sprite", "item")]
rotation = 0.0041928086
script = ExtResource("10_mcay7")
open = ExtResource("15_6giiv")
sprite = NodePath("Pudelko")
item = NodePath("venus")
id_przedmiotu = "pudelko5"

[node name="Pudelko" type="Sprite2D" parent="pudelko" unique_id=934711628]
texture_filter = 1
position = Vector2(-133.0743, -17.4422)
texture = ExtResource("17_j8pvy")

[node name="venus" parent="pudelko" unique_id=1622672239 node_paths=PackedStringArray("itemSFX") instance=ExtResource("14_ti13s")]
position = Vector2(-132.09946, -23.44634)
rotation = -0.0041928086
itemSFX = NodePath("../../item_podnoszenieSFX")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pudelko" unique_id=228599817]
position = Vector2(-132.07011, -16.446402)
shape = SubResource("RectangleShape2D_6giiv")

[node name="SzafaKopernik" type="Sprite2D" parent="." unique_id=1158389047]
texture_filter = 1
position = Vector2(-1, -41)
texture = ExtResource("19_6giiv")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_drzwi_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_drzwi_mouse_exited"]
[connection signal="mouse_entered" from="orzel" to="." method="_on_orzel_mouse_entered"]
[connection signal="mouse_exited" from="orzel" to="." method="_on_orzel_mouse_exited"]
[connection signal="mouse_entered" from="skorpion" to="." method="_on_skorpion_mouse_entered"]
[connection signal="mouse_exited" from="skorpion" to="." method="_on_skorpion_mouse_exited"]
[connection signal="mouse_entered" from="maly_woz" to="." method="_on_maly_woz_mouse_entered"]
[connection signal="mouse_exited" from="maly_woz" to="." method="_on_maly_woz_mouse_exited"]
[connection signal="mouse_entered" from="wielki_woz" to="." method="_on_wielki_woz_mouse_entered"]
[connection signal="mouse_exited" from="wielki_woz" to="." method="_on_wielki_woz_mouse_exited"]
[connection signal="mouse_entered" from="pudelko2" to="." method="_on_computer_click_mouse_entered"]
[connection signal="mouse_exited" from="pudelko2" to="." method="_on_computer_click_mouse_exited"]
[connection signal="mouse_entered" from="pudelko" to="." method="_on_computer_click_mouse_entered"]
[connection signal="mouse_exited" from="pudelko" to="." method="_on_computer_click_mouse_exited"]
