[gd_scene format=3 uid="uid://d1e1o540mwux0"]

[ext_resource type="Script" uid="uid://cyuup88v80ef4" path="res://scripts/tutorial/test_scene.gd" id="1_bc4q0"]
[ext_resource type="PackedScene" uid="uid://cla3577hp8lop" path="res://scenes/global/pausa.tscn" id="2_s8qbx"]
[ext_resource type="Script" uid="uid://diqkru1nsqlvb" path="res://scripts/tutorial/dialogi_tutorial.gd" id="3_iw68y"]
[ext_resource type="PackedScene" uid="uid://8d8gar38poer" path="res://scenes/global/player.tscn" id="4_shpus"]
[ext_resource type="Script" uid="uid://dybgqhonalipu" path="res://scenes/tutorial/tlo_320x_180.gd" id="5_4rh0u"]
[ext_resource type="Texture2D" uid="uid://b8cknov3b81xf" path="res://sprites/Environment/tlo320X180.png" id="5_330oy"]
[ext_resource type="Script" uid="uid://cpoo38pq8w1y5" path="res://scripts/tutorial/puzzle_object.gd" id="6_5xvl5"]
[ext_resource type="Texture2D" uid="uid://8uruxfpj7ilq" path="res://sprites/Environment/komputer.png" id="7_45dmw"]
[ext_resource type="PackedScene" uid="uid://b8qvtri4p8eei" path="res://scenes/tutorial/computer_puzzle.tscn" id="7_s8qbx"]
[ext_resource type="Texture2D" uid="uid://bapih2u5tawh7" path="res://sprites/meble/stol.png" id="8_wi1hv"]
[ext_resource type="AudioStream" uid="uid://8ufw1cbyydp4" path="res://sounds/elevatording.ogg" id="9_shpus"]
[ext_resource type="Texture2D" uid="uid://c5n2vrggerd1d" path="res://sprites/meble/polka.png" id="9_wyjub"]
[ext_resource type="Script" uid="uid://d3dnn4w1486vg" path="res://scripts/tutorial/wlaczenie.gd" id="10_uk77x"]
[ext_resource type="Texture2D" uid="uid://cgpub5sx2df8d" path="res://sprites/Environment/portalwylaczony.png" id="11_4rh0u"]
[ext_resource type="PackedScene" uid="uid://b2fsc3yn7gygp" path="res://itemy/scenes/tutorial/potka.tscn" id="13_c27oj"]
[ext_resource type="PackedScene" uid="uid://lceuq6u6ewdw" path="res://itemy/scenes/items.tscn" id="14_r66l1"]
[ext_resource type="Texture2D" uid="uid://cu37vls831ett" path="res://sprites/Other/portal_open_cutscene.png" id="14_uk77x"]
[ext_resource type="Script" uid="uid://cdkl08ebdy2e1" path="res://scripts/globalne/swap_scenes.gd" id="15_uonvo"]
[ext_resource type="AudioStream" uid="uid://hdsbkq24ujj5" path="res://sounds/teleport.mp3" id="15_wi1hv"]
[ext_resource type="Texture2D" uid="uid://cgqq6lfiaqlq7" path="res://sprites/Environment/drzwi.png" id="16_lsfxo"]
[ext_resource type="PackedScene" uid="uid://baio7uhdkpsdj" path="res://scenes/global/eq.tscn" id="17_kb8xq"]
[ext_resource type="AudioStream" uid="uid://b4vjxxnire65u" path="res://sounds/qubodup-DoorSet/ogg/qubodup-DoorOpen01.ogg" id="18_iw68y"]
[ext_resource type="Texture2D" uid="uid://c0ft723emky4" path="res://sprites/Environment/klodka.png" id="21_5xvl5"]
[ext_resource type="Script" uid="uid://kv6488sfg843" path="res://scripts/tutorial/klodka.gd" id="22_45dmw"]
[ext_resource type="AudioStream" uid="uid://c28knv0m3ghw7" path="res://sounds/Item2A.wav" id="24_wyjub"]
[ext_resource type="Texture2D" uid="uid://gnbwqqsvxxx6" path="res://sprites/Environment/jet_pack.png" id="25_wyjub"]
[ext_resource type="Script" uid="uid://bg5u6rbxvrj25" path="res://scenes/tutorial/ciiii.gd" id="26_uk77x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd71p"]
size = Vector2(320, 22.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtsjf"]
size = Vector2(17, 12.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_6qxox"]
radius = 33.06055

[sub_resource type="AtlasTexture" id="AtlasTexture_bfys1"]
atlas = ExtResource("11_4rh0u")
region = Rect2(0, 0, 81, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_diax2"]
atlas = ExtResource("14_uk77x")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh4qf"]
atlas = ExtResource("14_uk77x")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e3jp"]
atlas = ExtResource("14_uk77x")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irr0b"]
atlas = ExtResource("14_uk77x")
region = Rect2(0, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8n37"]
atlas = ExtResource("14_uk77x")
region = Rect2(80, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2jv1"]
atlas = ExtResource("14_uk77x")
region = Rect2(160, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4780l"]
atlas = ExtResource("14_uk77x")
region = Rect2(240, 64, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_phpwa"]
atlas = ExtResource("14_uk77x")
region = Rect2(0, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_twoas"]
atlas = ExtResource("14_uk77x")
region = Rect2(80, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqc20"]
atlas = ExtResource("14_uk77x")
region = Rect2(160, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fywa"]
atlas = ExtResource("14_uk77x")
region = Rect2(240, 128, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b60m"]
atlas = ExtResource("14_uk77x")
region = Rect2(0, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vbam"]
atlas = ExtResource("14_uk77x")
region = Rect2(80, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7gxw"]
atlas = ExtResource("14_uk77x")
region = Rect2(160, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp1je"]
atlas = ExtResource("14_uk77x")
region = Rect2(240, 192, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2ntk"]
atlas = ExtResource("14_uk77x")
region = Rect2(0, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flo71"]
atlas = ExtResource("14_uk77x")
region = Rect2(80, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpmxk"]
atlas = ExtResource("14_uk77x")
region = Rect2(160, 256, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tj3m"]
atlas = ExtResource("14_uk77x")
region = Rect2(240, 256, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_muxsv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfys1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_diax2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh4qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e3jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irr0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8n37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2jv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4780l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phpwa")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_twoas")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_iqc20")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_5fywa")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_8b60m")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_7vbam")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_j7gxw")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_gp1je")
}],
"loop": false,
"name": &"open_portal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_c2ntk")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_flo71")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_qpmxk")
}, {
"duration": 1.7,
"texture": SubResource("AtlasTexture_2tj3m")
}],
"loop": false,
"name": &"teleportation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gixj"]
size = Vector2(38, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_tutpt"]
animations = []

[sub_resource type="AtlasTexture" id="AtlasTexture_wyjub"]
atlas = ExtResource("21_5xvl5")
region = Rect2(4, 6, 4, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk77x"]
atlas = ExtResource("25_wyjub")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rh0u"]
atlas = ExtResource("25_wyjub")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spuqw"]
atlas = ExtResource("25_wyjub")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c27oj"]
atlas = ExtResource("25_wyjub")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r66l1"]
atlas = ExtResource("25_wyjub")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uonvo"]
atlas = ExtResource("25_wyjub")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsfxo"]
atlas = ExtResource("25_wyjub")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb8xq"]
atlas = ExtResource("25_wyjub")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mslb4"]
atlas = ExtResource("25_wyjub")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6glp"]
atlas = ExtResource("25_wyjub")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vngy4"]
atlas = ExtResource("25_wyjub")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5fkl"]
atlas = ExtResource("25_wyjub")
region = Rect2(64, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h5fkl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk77x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rh0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spuqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c27oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r66l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uonvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsfxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb8xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mslb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6glp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vngy4")
}],
"loop": false,
"name": &"ciii",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5fkl")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="TestScene" type="Node" unique_id=701386128]
script = ExtResource("1_bc4q0")
pause_scene = ExtResource("2_s8qbx")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1677385019]

[node name="Control" parent="CanvasLayer" unique_id=1232363862 instance=ExtResource("2_s8qbx")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Dialogi_tutorial" type="Node" parent="." unique_id=1020881150]
script = ExtResource("3_iw68y")

[node name="Tlo320x180" type="Sprite2D" parent="." unique_id=1836850381]
z_index = -1
texture_filter = 1
texture = ExtResource("5_330oy")
script = ExtResource("5_4rh0u")

[node name="Camera2D" type="Camera2D" parent="." unique_id=2144072193]
zoom = Vector2(2, 2)

[node name="spawn_up" type="Marker2D" parent="." unique_id=126392184]
position = Vector2(-107.255, -39.905)

[node name="Player" parent="." unique_id=611735744 instance=ExtResource("4_shpus")]
position = Vector2(-7, 7)

[node name="StaticBody2D" type="StaticBody2D" parent="." unique_id=2007621895]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" unique_id=1455287239]
position = Vector2(-1, -68)
shape = SubResource("RectangleShape2D_nd71p")

[node name="Environment" type="Node" parent="." unique_id=1405605651]

[node name="Computer" type="Node2D" parent="Environment" unique_id=1759841701]
position = Vector2(61, -47)

[node name="ComputerClick" type="Area2D" parent="Environment/Computer" unique_id=99664819]
script = ExtResource("6_5xvl5")
computer_ui = ExtResource("7_s8qbx")

[node name="computer" type="Sprite2D" parent="Environment/Computer/ComputerClick" unique_id=1357547065]
visibility_layer = 4
z_index = 1
texture_filter = 1
texture = ExtResource("7_45dmw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Computer/ComputerClick" unique_id=724107215]
z_index = 2
position = Vector2(-0.5, -2.25)
shape = SubResource("RectangleShape2D_wtsjf")

[node name="computerSFX" type="AudioStreamPlayer2D" parent="Environment/Computer" unique_id=670990271]
stream = ExtResource("9_shpus")

[node name="Stol" type="Sprite2D" parent="Environment" unique_id=2119605737]
texture_filter = 1
position = Vector2(-129, 68)
texture = ExtResource("8_wi1hv")

[node name="Szafa" type="Sprite2D" parent="Environment" unique_id=1200297408]
texture_filter = 1
position = Vector2(-23, -51)
texture = ExtResource("9_wyjub")

[node name="portal_area" type="Area2D" parent="Environment" unique_id=918158719]
script = ExtResource("10_uk77x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/portal_area" unique_id=2016725646]
position = Vector2(83, -40)
shape = SubResource("CircleShape2D_6qxox")

[node name="portal" type="AnimatedSprite2D" parent="Environment/portal_area" unique_id=210519002]
texture_filter = 1
position = Vector2(92, -39)
sprite_frames = SubResource("SpriteFrames_muxsv")
animation = &"open"
autoplay = "default"
speed_scale = 0.7

[node name="portalSFX" type="AudioStreamPlayer2D" parent="Environment/portal_area" unique_id=2127469039]
stream = ExtResource("15_wi1hv")

[node name="items" type="Node" parent="." unique_id=1789534054]

[node name="Sus2" parent="items" unique_id=1768127490 node_paths=PackedStringArray("itemSFX") instance=ExtResource("13_c27oj")]
texture_filter = 1
position = Vector2(42, 11)
itemSFX = NodePath("../../item_podnoszenieSFX")

[node name="Sus" parent="items" unique_id=2110382611 node_paths=PackedStringArray("itemSFX") instance=ExtResource("14_r66l1")]
texture_filter = 1
position = Vector2(-128, 51)
itemSFX = NodePath("../../item_podnoszenieSFX")

[node name="drzwi_area" type="Area2D" parent="." unique_id=1568346961 node_paths=PackedStringArray("drzwiSFX") groups=["doors"]]
script = ExtResource("15_uonvo")
load_scenes = "res://scenes/tutorial/magazyn.tscn"
drzwiSFX = NodePath("drzwiSFX")

[node name="Drzwi" type="Sprite2D" parent="drzwi_area" unique_id=327989133]
texture_filter = 1
position = Vector2(-108, -44)
texture = ExtResource("16_lsfxo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="drzwi_area" unique_id=33224028]
position = Vector2(-109, -40)
shape = SubResource("RectangleShape2D_8gixj")

[node name="drzwiSFX" type="AudioStreamPlayer2D" parent="drzwi_area" unique_id=761115434]
stream = ExtResource("18_iw68y")
volume_db = 9.545

[node name="eq" parent="." unique_id=1387199501 instance=ExtResource("17_kb8xq")]
texture_filter = 1
anchors_preset = -1
offset_left = -94.0
offset_top = 47.0
offset_right = -94.0
offset_bottom = 47.0
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=301782060]
visible = false
z_index = -1
texture_filter = 1
position = Vector2(92, -49)
sprite_frames = SubResource("SpriteFrames_tutpt")
animation = &""
speed_scale = 0.8

[node name="klodka" type="Sprite2D" parent="." unique_id=599398141 node_paths=PackedStringArray("klodka")]
texture_filter = 1
position = Vector2(-103, -40)
texture = SubResource("AtlasTexture_wyjub")
script = ExtResource("22_45dmw")
klodka = NodePath(".")

[node name="item_podnoszenieSFX" type="AudioStreamPlayer2D" parent="." unique_id=1650443309]
stream = ExtResource("24_wyjub")

[node name="animation_ciii" type="AnimatedSprite2D" parent="." unique_id=1554392622]
texture_filter = 1
position = Vector2(-7, 8)
sprite_frames = SubResource("SpriteFrames_h5fkl")
animation = &"ciii"
autoplay = "new_animation"
script = ExtResource("26_uk77x")

[connection signal="mouse_entered" from="Environment/Computer/ComputerClick" to="." method="_on_computer_click_mouse_entered"]
[connection signal="mouse_exited" from="Environment/Computer/ComputerClick" to="." method="_on_computer_click_mouse_exited"]
[connection signal="mouse_entered" from="drzwi_area" to="." method="_on_drzwi_area_mouse_entered"]
[connection signal="mouse_exited" from="drzwi_area" to="." method="_on_drzwi_area_mouse_exited"]
